# uDosConnect

./: .gitignore  .gitmodules  .udos-family-python.example  A2_DEVELOPMENT_PLAN.md  A2_PHASE_2_COMPLETION_SUMMARY.md  A2_PHASE_3_IMPLEMENTATION_PLAN.md  A2_PROGRESS_SUMMARY.md  A3_DEVELOPMENT_PLAN.md  ADMIN_PANEL_IMPLEMENTATION_SUMMARY.md  AGENTS.md  ALL_FILES_SUMMARY.md  CONSOLIDATED_PHASE_8_IMPLEMENTATION_PLAN.md  CONTENT_MANAGEMENT_API_SUMMARY.md  CONTRIBUTING.md  CURRENT_IMPLEMENTATION_SUMMARY.md  CURRENT_STATUS_SUMMARY.md  DEEPSEEK_COMPLETE_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_APPROACH_SUMMARY.md  DEV_MODE_IMPLEMENTATION.md  DEV_MODE_ROUND_1_IMPLEMENTATION_SUMMARY.md  DEV_MODE_SUMMARY.md  DSC2_DEVELOPMENT_BRIEF.md  ENHANCED_ADMIN_PANEL_SUMMARY.md  FILES_SUMMARY.md  FINAL_COMPLETE_SUMMARY.md  FINAL_COMPREHENSIVE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_OVERVIEW.md  JWT_AUTHENTICATION_SUMMARY.md  MASTER_INDEX.md  MISTRAL_PROMPT_IMPLEMENTATION.md  PHASE_8A_IMPLEMENTATION_SUMMARY.md  PHASE_8B_PROGRESS_SUMMARY.md  PHASE_8C_IMPLEMENTATION_SUMMARY.md  PHASE_8_IMPLEMENTATION_ROADMAP.md  PRODUCTION_CHECKLIST.md  PROJECT_STATUS_SUMMARY.md  (+20 more)
v2-reference/uDOS-core/: CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml
v2-reference/uDOS-core/@dev/: README.md
v2-reference/uDOS-core/config/: environment.example.env
v2-reference/uDOS-core/contracts/: README-place_ref_contract_lift.md  README.md  automation-job-contract.json  (+20 more)
v2-reference/uDOS-surface/: CHANGELOG.md  README.md  pyproject.toml
(+1657 files in other folders)
