[project]
name = "udos-core"
version = "0.2.0"
description = "uDOS v2 deterministic runtime kernel starter"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "jsonschema>=4.20",
  "referencing>=0.35",
]

[project.scripts]
udos-core = "udos_core.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "green_proof: minimal PR gate (logs/feeds/spool + templates); run: pytest -m green_proof",
  "contract: JSON contract / schema depth beyond the green bundle",
]
