[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udos-surface"
version = "0.2.0"
description = "uDOS surface browser host and compatibility service"
requires-python = ">=3.11"
dependencies = ["cryptography", "fastapi", "uvicorn"]

[project.optional-dependencies]
dev = ["httpx", "pytest"]

[project.scripts]
udos-surface = "wizard.main:run"
udos-surface-demo = "wizard.demo:main"
udos-wizard = "wizard.main:run"
udos-wizard-demo = "wizard.demo:main"

[tool.setuptools.packages.find]
include = ["wizard*"]
